# safenet

./: .gitignore  .gitmodules  .npmrc  AGENTS.md  CLAUDE.md  Cargo.toml  PORTS.md  README.md  biome.json  go.mod  go.sum  integration_logs.txt  package-lock.json  package.json
.agents_tmp/: PLAN.md
.devcontainer/: devcontainer.json
.devcontainer/macos/: devcontainer.json
.github/: pull_request_template.md
.github/workflows/: ci.yml  coverage.yml  deploy_docs.yml  deploy_explorer.yml  docker.yml  docs_preview.yml  gemini_review.yml  integration.yml  post_coverage_comment.yml  pr.yml  rust.yml  validator.yml
certora/conf/: Staking.conf  StakingCommon.conf  StakingRules.conf  StakingWithdrawal.conf
certora/harnesses/: StakingHarness.sol
certora/specs/: Staking.spec
contracts/: .env copy  .env.sample  README.md  foundry.toml  package.json
contracts/audits/: audit.md
contracts/script/: AcceptValidators.s.sol  ClaimWithdraw.s.sol  Deploy.s.sol  DeployCheckerOracle.s.sol  DeployCosigner.s.sol  DeployERC20.s.sol  DeploySafenetGuard.s.sol  DeploySentinelOracle.s.sol  DeploySentinelOracleV2.s.sol  DeployStaking.s.sol  DeployTestConsensus.s.sol  DeployValidator7702Account.s.sol  ERC20.s.sol  InitiateWithdraw.s.sol  ProposeAndAcceptValidators.s.sol  ProposeOracleTransaction.s.sol  ProposeValidators.s.sol  README.md  StakeSafe.s.sol  StakeWithdraw.s.sol  Staking.s.sol
crates/core/: Cargo.toml
crates/core/src/: driver.rs  kdf.rs  lib.rs  serialization.rs
crates/core/src/index/: blocks.rs  bloom.rs  clock.rs  events.rs  mod.rs
crates/core/src/observability/: logging.rs  metrics.rs  mod.rs
crates/core/src/state/: mod.rs  storage.rs
crates/core/src/tx/: account.rs  fees.rs  mod.rs  signer.rs  storage.rs  types.rs
crates/sentinel/: Cargo.toml
crates/sentinel/src/: action.rs  bindings.rs  config.rs  detector.rs  dynamic_checker.rs  effect.rs  hashing.rs  main.rs  service.rs  servicev2.rs  state.rs  static_checker.rs
crates/validator/: Cargo.toml
crates/validator/src/: bindings.rs  config.rs  main.rs  merkle.rs  secrets.rs  service.rs
crates/validator/src/consensus/: epoch.rs  group.rs  hashing.rs  mod.rs
crates/validator/src/consensus/checks/: mod.rs  multi_send.rs
crates/validator/src/frost/: ecdh.rs  error.rs  keygen.rs  marshal.rs  mod.rs  nonces.rs  participants.rs  preprocess.rs  sign.rs  signing.rs
crates/validator/src/service/: action.rs  effect.rs  mod.rs
crates/validator/src/state/: keygen.rs  mod.rs  preprocess.rs  sign.rs  transactions.rs
docs/: README.md  configuration.md  docusaurus.config.ts  glossary.md  overview-codex.md  overview-gemini.md  overview.md  package.json  staking.excalidraw  validator-handbook.md  validator-learning-guide.md
epics/: 2026_06_09_rust_validator_port_index.md  2026_06_09_safenet_core_crate.md  2026_06_25_rust_sentinel_port.md  2026_07_01_rust_validator_port.md  2026_07_02_sentinel_commit_reveal_voting.md  2026_07_14_rust_validator_port_review.md  2026_07_14_validator_state_machine_flow_test_harness.md  2026_07_20_sentinel_reference_checks.md  2026_07_20_sentinel_vote_reason.md
examples/: .env.sample  README.md  attest-safe-tx.ts  hypernative-guard-bytecode.ts  package.json  test-cosigner-hypernative.ts  tsconfig.json
explorer/: .env.sample  README.md  index.html  package.json  vite.config.js  vitest.config.ts
features/: 2026_03_09_explorer_transaction_list_refresh_and_row_redesign.md  2026_03_09_feature_template.md  2026_03_09_search_proposals_by_safe_address.md  2026_03_10_contracts_hardening_and_certora_coverage.md  2026_03_10_cross_workspace_deduplication.md  2026_03_10_epoch_info_page.md  2026_03_10_explorer_test_coverage_and_refactoring.md  2026_03_10_fix_epoch_load_more_pagination.md  2026_03_10_frost_cryptographic_test_coverage.md  2026_03_10_safe_tx_detail_page.md  2026_03_10_validator_critical_fixes.md  2026_03_10_validator_health_check.md  2026_03_10_validator_test_coverage_and_code_quality.md  2026_03_12_fix_concurrent_tx_resubmit.md  2026_03_12_validator_address_as_frost_identifier.md  2026_03_16_explorer_design_system.md  2026_03_16_update_explorer_validator_address.md  2026_03_19_explorer_header_footer_redesign.md  2026_03_23_add_analytics_component.md  2026_03_25_add_explorer_tooltips.md  2026_03_27_env_configurable_defaults.md  2026_04_10_fix_ipfs_deep_links.md  2026_04_20_oracle_interface_and_transaction_checks.md  2026_04_21_plausible_hash_based_routing.md  2026_05_05_signature_info.md  2026_05_05_transaction_checker_oracle_v1.md  2026_05_08_sentinelsgame_phase1.md  2026_05_08_wardensgame_phase1.md  2026_05_19_explicit_transaction_rejection.md  2026_05_21_og_image_meta_tags.md  2026_05_21_rpc_url_param_and_default.md  2026_05_29_contracts_message_bus_documentation.md  epoch-info-page.md  feature_template.md
pr-130/: 404.html  index.html  sitemap.xml
scripts/: .env.sample  README.md  generate_coverage_report.sh  run_devnet.sh  run_go_integration_test.sh  run_integration_test.sh  run_port_integration_test.sh  run_sentinel_integration_test.sh  run_validator_port_integration_test.sh  rust_coverage.sh  test-cosigner-hypernative.ts
spec/: validator.ml
validator/: .env.sample  Dockerfile  README.md  package.json  tsconfig.dist.json  vitest.config.ts
validator-go/: go.mod  go.sum  main.go
validator-rust/: Cargo.toml
validator-rust/src/: actions.rs  bindings.rs  chain.rs  config.rs  driver.rs  main.rs  state.rs  watcher.rs
validator-rust/src/config/: addresses.rs  chain.rs  mod.rs  provider.rs
validator-rust/src/frost/: keygen.rs  marshal.rs  mod.rs  participants.rs  secret.rs
validator-rust/src/state/: mod.rs  storage.rs
(+522 files in other folders)
