[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.dependencies]
alloy = { version = "2", features = ["full"] }
argh = "0.1"
futures = "0.3"
metrics = "0.24"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.9", features = ["sqlite", "runtime-tokio"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
toml = "1"
tracing = "0.1"
url = { version = "2", features = ["serde"] }
