[package]
name = "validator-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy = "1"
argh = "0.1"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
url = { version = "2", features = ["serde"] }
