[package]
name = "validator-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy = { version = "2", features = ["signer-local"] }
anyhow = "1"
argh = "0.1"
frost-secp256k1 = "3"
rusqlite = { version = "0.39.0", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
url = { version = "2", features = ["serde"] }
