[package]
name = "safenet-core"
version = "0.2.0"
edition = "2024"
publish = false

[dependencies]
alloy = { version = "2", features = ["full"] }
metrics = "0.24"
metrics-exporter-prometheus = "0.18"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.9", features = ["sqlite"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
url = { version = "2", features = ["serde"] }

[dev-dependencies]
tokio = { version = "1", features = ["test-util"] }
