[package]
name = "safenet-core"
version = "0.2.0"
edition = "2024"
publish = false

[dependencies]
alloy.workspace = true
futures.workspace = true
metrics.workspace = true
metrics-exporter-prometheus = "0.18"
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
url.workspace = true

[dev-dependencies]
alloy = { workspace = true, features = ["json-rpc"] }
tokio = { workspace = true, features = ["test-util"] }
