[package]
name = "sentinel"
version = "0.2.0"
edition = "2024"
publish = false

[dependencies]
safenet-core.path = "../core"
alloy.workspace = true
argh.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
