[package]
name = "sentinel"
version = "0.2.0"
edition = "2024"
publish = false

[dependencies]
alloy.workspace = true
argh.workspace = true
reqwest.workspace = true
safe-tx.workspace = true
safenet-core.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
url.workspace = true
