[package]
name = "validator"
version = "0.2.0"
edition = "2024"
publish = false

[dependencies]
alloy.workspace = true
argh.workspace = true
safenet-core.workspace = true
serde.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
url.workspace = true
