[package]
name = "validator"
version = "0.2.0"
edition = "2024"
publish = false

[dependencies]
alloy.workspace = true
argh.workspace = true
frost-core = { version = "3", features = ["internals"] }
frost-secp256k1 = "3"
k256.workspace = true
rand.workspace = true
safenet-core.workspace = true
serde.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
url.workspace = true
